--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,3 +13,7 @@ en:
         description: 'Promo Code Give X Between A-B'
       promo_code_for_every:
         description: 'Promo Code Give X For Every Y'
+      store_credit_referral:
+          description: 'Credit Referring User'
+      promo_code_referral:
+          description: 'Promo Code for Referred User'
